# Pipeline-ETL-Weather

./: .gitignore  README.md  pyproject.toml
dags/: weather_dag.py
notebooks/: analise_campinas.ipynb  analysis_data.ipynb
src/: extract_data.py  load_data.py  transform_data.py
